# Agentic_Apps

./: .env.local  .gitignore  10_RAG.ipynb  10_Vector_databases.ipynb  2_langgraph_demo.py  7_agent_mcp_adapters.py  8_custom_mcp_test.py  8_filesystem_mcp.py  9_streamlit_demo.py  langchain_demo.py  langgraph-demo.py  langgraph_agent.py  langgraph_agent_with_memory.py  langgraph_agent_with_structured_response.py  langgraph_agent_with_tools.py  langgraph_mcp_adapters.py  pyproject.toml  requirements.txt
